--- a/components/CheckoutMain/checkout-main.module.scss
+++ b/components/CheckoutMain/checkout-main.module.scss
@@ -164,7 +164,7 @@
   font-weight: 500;
   font-size: 15px;
   border-radius: 24px;
-  border: 1px solid #09C094;
+  border: 1px solid #D9E1E5;
   margin-bottom: 30px;
   padding: 0 20px;
 
