--- a/components/CartMain/cart-main.module.scss
+++ b/components/CartMain/cart-main.module.scss
@@ -173,6 +173,68 @@
   border-radius: 24px;
   padding: 26px;
   background-color: #fff;
+  .rightInner{
+
+  }
+}
+
+.promoCode {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.sendPromoCode {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  border: 1px solid #d4c6b9;
+  border-radius: 2px;
+  input {
+    width: 70%;
+    border: none;
+    background: transparent;
+    padding: 0 10px;
+    outline: none;
+  }
+  button {
+    width: 30%;
+    background: white;
+    border: 1px solid #d4c6b9;
+    //border: 0;
+    outline: none;
+  }
+}
+.activatedPromoCode {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #d4c6b9;
+  border-radius: 2px;
+  font-size: 14px;
+  div {
+    text-transform: uppercase;
+    font-weight: bold;
+    margin: 0 5px;
+  }
+  button {
+    background: transparent;
+    margin-left: 5px;
+    color: red;
+    text-decoration: underline;
+  }
+}
+.wrongPromoCode {
+  color: red;
+  font-weight: 500;
+  font-size: 13px;
+  margin-bottom: 15px;
+  text-align: center;
 }
 
 .underline{
@@ -270,15 +332,15 @@
 
       .showMobile {
         display: block;
-        margin-top:30px;  
-      
+        margin-top:30px;
+
 
         .productName {
           display: flex;
           align-items: center;
           justify-content: space-between;
           margin:0 15px;
-          
+
         }
         .name2{
           width: 250px;
@@ -291,20 +353,20 @@
           text-align: left;
           color: #5E697B;
         }
-      
+
         .desc{
           color: #717171;
           font-size: 14px;
           font-weight: 400;
           margin:10px 15px;
         }
-      
+
         .card{
           margin-top: 16px;
           margin-left: 15px;
           display: flex;
           justify-content: space-evenly;
-      
+
           .img{
             width: 165px;
             height: 180px;
@@ -344,17 +406,17 @@
               }
             }
           }
-        }         
+        }
       }
     }
   }
-  
+
 
   .right {
     width: 100%;
     margin-top: 56px;
   }
-  
+
 }
 
 
